--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 .sidebar-left ul li a:hover{
   background-color: #e8e9e9;
     
-    border-radius: 25px;
+  border-radius: 25px;
 }
 .sidebar-left ul li:first-of-type a:hover {
   background-color: #eff8fe;
@@ -60,3 +60,6 @@ body {
   width: fit-content;
   padding: 12px 27px 12px 13px;
 }
+/* .sidebar-left ul li a:hover img {
+  content: url(srcSet);
+} */
